auth tapi masih eror
