# docs/swagger.json
@@ -3,7 +3,6 @@
     "info": {
         "description": "API untuk test MNC",
         "title": "MNC Test API",
-        "termsOfService": "http://swagger.io/terms/",
         "contact": {
             "name": "API Support",
             "email": "m.iqmal.riffai@gmail.com"
@@ -285,7 +284,12 @@
         },
         "/users": {
             "get": {
-                "description": "Menampilkan daftar semua pengguna",
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Menampilkan daftar semua pengguna, membutuhkan token Bearer",
                 "produces": [
                     "application/json"
                 ],
@@ -301,6 +305,12 @@
                             "items": {
                                 "$ref": "#/definitions/models.User"
                             }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ErrorResponse"
                         }
                     },
                     "500": {
@@ -460,6 +470,14 @@
                     "type": "integer"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "description": "Masukkan token dengan format \"Bearer {token}\"",
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
