# routes/routes.go
@@ -1,6 +1,7 @@
 package routes
 
 import (
+	"test-mnc/config"
 	"test-mnc/controllers"
 
 	"github.com/gin-gonic/gin"
@@ -11,7 +12,7 @@ import (
 func SetupRouter() *gin.Engine {
 	r := gin.Default()
 
-	r.GET("/users", controllers.GetAllUsers)
+	// r.GET("/users", controllers.GetAllUsers)
 	r.GET("/merchants", controllers.GetAllMerchants)
 	r.POST("/installment", controllers.CreateInstallment)
 	r.GET("/installment", controllers.GetAllInstallment)
@@ -20,7 +21,11 @@ func SetupRouter() *gin.Engine {
 	r.GET("/recap", controllers.GetInstallmentRecap)
 	r.POST("/login", controllers.Login)
 	r.POST("/logout", controllers.Logout)
-
+	protected := r.Group("/")
+	protected.Use(config.AuthMiddleware())
+	{
+		protected.GET("/users", controllers.GetAllUsers)
+	}
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	return r
 }
